--- a/employer_management/employer_site/templates/index.html
+++ b/employer_management/employer_site/templates/index.html
@@ -1,1 +1,19 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name="theme-color" content="#000000"><link rel="stylesheet" href="https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css"><script src="https://use.fontawesome.com/cf3e0cca39.js"></script><link rel="manifest" href="/manifest.json"><link rel="shortcut icon" href="/favicon.ico"><title>React App</title><link href="/static/css/main.d76dd91a.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script type="text/javascript" src="/static/js/main.68119945.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
+    <meta name="theme-color" content="#000000">
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css">
+    <script src="https://use.fontawesome.com/cf3e0cca39.js"></script>
+    <link rel="manifest" href="/static/manifest.json">
+    <link rel="shortcut icon" href="/static/favicon.ico">
+    <title>Quản lý nhân viên</title>
+    <link href="/static/css/main.d76dd91a.css" rel="stylesheet">
+</head>
+<body>
+<noscript>You need to enable JavaScript to run this app.</noscript>
+<div id="root"></div>
+<script type="text/javascript" src="/static/js/main.68119945.js"></script>
+</body>
+</html>
